# orca-tidy

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/: lint.bash  prerequisite_info.bash
format/: Dockerfile  llvm-snapshot-trusty.list
orca_tidy/: RemoveCtorDotrCommentsTest.cc  RemoveCtorDtorComments.cc  RemoveCtorDtorComments.h  RemoveCtorDtorCommentsTest.cc  Rewriter.cc  Rewriter.h  TidierInterface.cc  TidierInterface.h  ctor_comment_remover.cc  ctor_comment_remover.h  ctor_comment_remover_test.cc  main.cc  rewriter.cc  rewriter.h  string_writer.cc  string_writer.h  temp_file_writer.cc  temp_file_writer.h  writer.cc  writer.h
